each to maping data

--- a/mixins/style.sass
+++ b/mixins/style.sass
@@ -1,16 +1,43 @@
 
+@mixin border-radius($radius)
+  -webkit-border-radius: $radius
+  -moz-border-radius: $radius
+  -ms-border-radius: $radius
+  border-radius: $radius
 
-  @mixin border-radius($radius)
-    -webkit-border-radius:$radius
-    -moz-border-radius:$radius
-    -ms-border-radius:$radius
-    border-radius:$radius
-  
-
-  #awesome 
+  #awesome
     width: 150px
     height: 150px
     background-color: green
     @include border-radius(15px)
-  
 
+// if statement
+
+@mixin border-stroke($val)
+  @if $val == light
+    border: 1px solid black
+
+  @else if $val == medium
+    border: 3px solid black
+
+    @else if $val == heavy
+      border: 6px solid black
+
+    @else
+      border: none
+
+  #box
+    width: 150px
+    height: 150px
+    background-color: red
+    @include border-stroke(medium)
+
+  //for loop
+
+  @for $j from 1 through 6
+  .text-#{$j}  font-size: 15*$j
+
+//Use @each to Map Over Items in a List
+
+  @each $color in blue, black, red
+    .#{$color}-bg background-color: $color
